// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customers .all() should return a list of all customers 1`] = `
Array [
  Customer {
    "_links": Object {
      "documentation": Object {
        "href": "https://docs.mollie.com/reference/v2/customers-api/get-customer",
        "type": "text/html",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/customers/cst_kEn1PlbGa",
        "type": "application/hal+json",
      },
    },
    "createdAt": "2018-04-06T13:23:21.0Z",
    "email": "customer@example.org",
    "id": "cst_kEn1PlbGa",
    "locale": "nl_NL",
    "metadata": null,
    "mode": "test",
    "name": "Customer A",
    "recentlyUsedMethods": Array [
      "creditcard",
      "ideal",
    ],
    "resource": "customer",
  },
]
`;

exports[`customers .all() should work with a callback 1`] = `
Array [
  Customer {
    "_links": Object {
      "documentation": Object {
        "href": "https://docs.mollie.com/reference/v2/customers-api/get-customer",
        "type": "text/html",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/customers/cst_kEn1PlbGa",
        "type": "application/hal+json",
      },
    },
    "createdAt": "2018-04-06T13:23:21.0Z",
    "email": "customer@example.org",
    "id": "cst_kEn1PlbGa",
    "locale": "nl_NL",
    "metadata": null,
    "mode": "test",
    "name": "Customer A",
    "recentlyUsedMethods": Array [
      "creditcard",
      "ideal",
    ],
    "resource": "customer",
  },
]
`;

exports[`customers .update() should return a customer instance 1`] = `
Customer {
  "_links": Object {
    "documentation": Object {
      "href": "https://docs.mollie.com/reference/v2/customers-api/get-customer",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/customers/cst_kEn1PlbGa",
      "type": "application/hal+json",
    },
  },
  "createdAt": "2018-04-06T13:23:21.0Z",
  "email": "customer@example.org",
  "id": "cst_kEn1PlbGa",
  "locale": "nl_NL",
  "metadata": null,
  "mode": "test",
  "name": "Customer A",
  "recentlyUsedMethods": Array [
    "creditcard",
    "ideal",
  ],
  "resource": "customer",
}
`;

exports[`customers .update() should work with a callback 1`] = `
Customer {
  "_links": Object {
    "documentation": Object {
      "href": "https://docs.mollie.com/reference/v2/customers-api/get-customer",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/customers/cst_kEn1PlbGa",
      "type": "application/hal+json",
    },
  },
  "createdAt": "2018-04-06T13:23:21.0Z",
  "email": "customer@example.org",
  "id": "cst_kEn1PlbGa",
  "locale": "nl_NL",
  "metadata": null,
  "mode": "test",
  "name": "Customer A",
  "recentlyUsedMethods": Array [
    "creditcard",
    "ideal",
  ],
  "resource": "customer",
}
`;
